day code len git

--- a/cart.html
+++ b/cart.html
@@ -25,20 +25,6 @@
               <th style="width: 25%">Tên</th>
               <th style="width: 15%" class="nowrap">
                 <span class="mr-2">Giá</span>
-                <div class="sort-arrows d-inline-block">
-                  <i
-                    class="fa fa-arrow-up text-success"
-                    id="SapXepTang"
-                    onclick="sortTable('asc')"
-                    style="cursor: pointer"
-                  ></i>
-                  <i
-                    class="fa fa-arrow-down text-danger ml-2"
-                    id="SapXepGiam"
-                    onclick="sortTable('desc')"
-                    style="cursor: pointer"
-                  ></i>
-                </div>
               </th>
               <th style="width: 30%">Mô tả</th>
               <th style="width: 15%">Số lượng</th>
@@ -53,12 +39,18 @@
           <button class="btn btn-danger" onclick="resetCart()">
             Reset Giỏ Hàng
           </button>
-          <button class="btn btn-success" onclick="payment()">
+          <button class="btn btn-success" onclick="goToPayment()">
             Thanh Toán
           </button>
         </div>
       </div>
     </div>
+    <script>
+      function goToPayment() {
+        resetCart();
+        window.location.href = "/pay.html";
+      }
+    </script>
     <!-- cdn axios -->
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <!-- my js -->
